KLS: Added respawn and respawn variance to traps.
KLS: Increased range on sense traps.
KLS: Sense trap will now point the player in the direction of the trap they are sensing.
KLS: Disarm trap will no longer use sense trap's timer.
KLS: Disarm trap will no longer fail to disarm traps on success.
KLS: Increased range on disarm trap slightly.

Required SQL:
ALTER TABLE `traps` DROP `spawnchance`;
ALTER TABLE `traps` ADD `respawn_time` INT(11) UNSIGNED DEFAULT '60' NOT NULL AFTER `skill`;
ALTER TABLE `traps` ADD `level` MEDIUMINT(4) UNSIGNED DEFAULT '1' NOT NULL AFTER `skill`
ALTER TABLE `traps` ADD `respawn_var` INT(11) UNSIGNED DEFAULT '0' NOT NULL AFTER `respawn_time`

==10/17/2008
KLS: Tweaks to /pet attack
KLS: Renamed WhipeHateList to WipeHateList so I never have to view that spelling monster ever again.
cavedude00: (Rocker8956) Added shutdowndelay to zone query.

==10/16/2008
Derision: Cosmetic change to foraging to correctly identify food/drink items.
cavedude00: Added rules to determine if /ooc and /auction should be server wide (true) or zone wide (false - Live Like).
cavedude00: #peqzone can no longer be used if invulnerable.
KLS: More changes to proc code.  Added an option of calc. proc rate based on speed of the weapon
KLS: Added Rules: Combat:AdjustProcPerMinute(true), Combat:AvgProcsPerMinute(18.0), Combat:ProcPerMinDexContrib(0.075), Combat:BaseProcChance(0.035), Combat:ProcDexDivideBy(11000)
KLS: Tweak to monster AI to hopefully save computation.

Optional SQL:
insert into rule_values values (0, 'Chat:ServerWideOOC', 'true');
insert into rule_values values (0, 'Chat:ServerWideAuction', 'true');

==10/15/2008
Derision: Added OP_LevelAppearance to utils/patch_Titanium.conf and it is now sent to nearby clients (eye candy when you level)
Derision: (seveianrex) Alcohol Drinking / Skillup Fix
KLS: Change to proc code to correct some oddities with % chance to proc.
KLS: Changed how avoidance bonuses are calculated to be like other melee bonuses.